--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
@@ -18,6 +19,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/testing-library__jest-dom": "^5.14.7",
+    "babel-jest": "^29.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
     "tailwindcss": "^3.3.2"
   }
 }
