--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-intl": "^3.0.0-beta.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0"
