--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "mongoose": "^7.3.4",
     "next": "13.4.7",
     "next-intl": "^3.0.0-beta.7",
     "postcss": "8.4.24",
