--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.7",
+    "@mui/material": "^5.14.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "install": "^0.13.0",
     "next": "13.4.7",
     "next-intl": "^3.0.0-beta.7",
+    "npm": "^9.8.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0"
