--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next-intl": "^3.0.0-beta.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
