--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4",
     "install": "^0.13.0",
+    "mongoose": "^7.3.4",
     "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "next-intl": "^3.0.0-beta.7",
     "npm": "^9.8.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
     "sharp": "^0.32.3"
   },
