--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "autoprefixer": "10.4.14",
+    "crypto-js": "^4.1.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
