--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.14.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1425.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
@@ -29,6 +31,8 @@
     "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-s3": "^1.3.1",
     "sharp": "^0.32.3"
   },
   "devDependencies": {
