--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "editor.suggest.insertMode": "replace",
         "editor.formatOnSave": false,
         "editor.formatOnPaste": false
-    }
+    },
+    "git.autofetch": true,
 }
