--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-player": "^2.12.0",
     "react-s3": "^1.3.1",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.3"
