--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "express": "^4.18.2",
     "install": "^0.13.0",
     "mongoose": "^7.3.4",
-    "next": "^13.4.7",
-    "next-auth": "^4.22.1",
-    "next-intl": "^3.0.0-beta.7",
+    "next": "13.5.2",
+    "next-auth": "^4.23.1",
+    "next-intl": "^3.0.0-beta.18",
     "npm": "^9.8.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
